fix: layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -280,10 +280,12 @@ Scoreboard
     font-size: 2.5rem;
   }
   .header{
-    font-size: 8rem;
+    font-size: 4rem;
   }
 }
 
 .lastScore {
-  color: rgba(255, 255, 255, 0.5)
+  color: rgba(255, 255, 255, 0.5);
+  margin-top: 0;
+  margin-bottom: 0;
 }
